[gd_scene load_steps=10 format=3 uid="uid://bt24i4vmeh70g"]

[ext_resource type="Script" uid="uid://brylu4kt7rmh3" path="res://enemy/Resource_Scene/boss_attack.gd" id="1_v7bxq"]
[ext_resource type="Texture2D" uid="uid://2plht0nu7lvf" path="res://player/image_player/IMG_0798.PNG" id="2_d88pd"]
[ext_resource type="PackedScene" uid="uid://c8mppk6beyulp" path="res://utility/hurt_box.tscn" id="3_ptqhh"]
[ext_resource type="PackedScene" uid="uid://byxlprmy3k5oa" path="res://utility/hit_box.tscn" id="4_2uyc5"]

[sub_resource type="Animation" id="Animation_6f005"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gwdgb"]
resource_name = "walk"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ifi0"]
_data = {
&"RESET": SubResource("Animation_6f005"),
&"walk": SubResource("Animation_gwdgb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_08go0"]
radius = 8.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_04q52"]
radius = 8.0
height = 16.0

[node name="fire_ball" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_v7bxq")
can_drop_time_orb = false

[node name="Sprite2" type="Sprite2D" parent="."]
position = Vector2(0, -0.468574)
scale = Vector2(0.046875, 0.0476435)
texture = ExtResource("2_d88pd")
offset = Vector2(0, 29.505)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0ifi0")
}

[node name="hurtbox" parent="." instance=ExtResource("3_ptqhh")]
collision_layer = 4
collision_mask = 4
hurtboxtype = 1

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_08go0")

[node name="hitbox" parent="." instance=ExtResource("4_2uyc5")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource("CapsuleShape2D_04q52")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="fire_ball_time" type="Timer" parent="."]
wait_time = 5.0

[connection signal="hurt" from="hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="fire_ball_time" to="." method="_on_fire_ball_time_timeout"]

[editable path="hurtbox"]
[editable path="hitbox"]
